--- a/css/globals.css
+++ b/css/globals.css
@@ -1,22 +1,56 @@
 @font-face {
-  font-family: "wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1";
-  src: url("../fonts/wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1.woff2") format("woff2");
+  font-display: block;
+  font-family: wf_dd28b3957391427eb54de1c9e;
+  src: url("https://static.wixstatic.com/ufonts/643d94_dd28b3957391427eb54de1c9eff7cfb1/woff2/file.woff2") format("woff2"),
+    url("https://static.wixstatic.com/ufonts/643d94_dd28b3957391427eb54de1c9eff7cfb1/woff/file.woff") format("woff"),
+    url("https://static.wixstatic.com/ufonts/643d94_dd28b3957391427eb54de1c9eff7cfb1/ttf/file.ttf") format("ttf");
 }
 
 @font-face {
-  font-family: "wfont_643d94_93c16d86ec9d47d0a2a36894fbdd54fd";
-  src: url("../fonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd.woff2") format("woff2");
+  font-family: "DIN-Next-W01-Light";
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/3e0b2cd7-9657-438b-b4af-e04122e8f1f7.eot?#iefix");
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/3e0b2cd7-9657-438b-b4af-e04122e8f1f7.eot?#iefix") format("eot"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/bc176270-17fa-4c78-a343-9fe52824e501.woff") format("woff"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/3516f91d-ac48-42cd-acfe-1be691152cc4.ttf") format("truetype"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/d1b1e866-a411-42ba-8f75-72bf28e23694.svg#d1b1e866-a411-42ba-8f75-72bf28e23694")
+      format("svg");
+  font-display: block;
 }
+
 @font-face {
-  font-family: "wfont_643d94_f52303b2efea42e1b4aeed119e42672e";
-  src: url("../fonts/643d94_f52303b2efea42e1b4aeed119e42672e.woff2") format("woff2");
+  font-family: "DIN-Next-W02-Light";
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/48e5a0e1-2d56-46e5-8fc4-3d6d5c973cbf.eot?#iefix");
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/48e5a0e1-2d56-46e5-8fc4-3d6d5c973cbf.eot?#iefix") format("eot"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/07d62b21-8d7a-4c36-be86-d32ab1089972.woff") format("woff"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/c0050890-bbed-44b9-94df-2611d72dbb06.ttf") format("truetype"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/9f774d17-c03a-418e-a375-34f3beecbc7a.svg#9f774d17-c03a-418e-a375-34f3beecbc7a")
+      format("svg");
+  font-display: block;
+}
+
+@font-face {
+  font-family: "DIN-Next-W10-Light";
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/3d009cd7-c8fe-40c0-93da-74f4ea8c530b.eot?#iefix");
+  src: url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/3d009cd7-c8fe-40c0-93da-74f4ea8c530b.eot?#iefix") format("eot"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/a9e95a29-98a7-404a-90ee-1929ad09c696.woff") format("woff"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/0a7663fd-eae8-4e50-a67a-225271f8cceb.ttf") format("truetype"),
+    url("//static.parastorage.com/services/third-party/fonts/user-site-fonts/fonts/58ae9be9-5d95-44b6-8b6c-e6da6a46822c.svg#58ae9be9-5d95-44b6-8b6c-e6da6a46822c")
+      format("svg");
+  font-display: block;
+}
+
+@font-face {
+  font-display: block;
+  font-family: wf_93c16d86ec9d47d0a2a36894f;
+  src: url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff2/file.woff2") format("woff2"),
+    url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff/file.woff") format("woff"),
+    url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/ttf/file.ttf") format("ttf");
 }
 
 :root {
   --fnt: var(--font_9);
-
   --font_0: normal normal normal 24px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
-
+  --font_1: normal normal normal 16px/1.4em din-next-w01-light, din-next-w02-light, din-next-w10-light, sans-serif;
   --font_2: normal normal normal 20px/1.6em wfont_643d94_93c16d86ec9d47d0a2a36894fbdd54fd, wf_93c16d86ec9d47d0a2a36894f, orig_tbc_x_medium;
   --font_3: normal normal normal 48px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
   --font_4: normal normal normal 32px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
@@ -25,6 +59,7 @@
   --font_7: normal normal normal 18px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
   --font_8: normal normal normal 16px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
   --font_9: normal normal normal 14px/1.6em wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1, wf_dd28b3957391427eb54de1c9e, orig_tbc_x_regular;
+  --font_10: normal normal normal 10px/1.4em din-next-w01-light, din-next-w02-light, din-next-w10-light, sans-serif;
 }
 
 * {
