--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 .main-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 8.4rem;
   background-color: rgb(26, 30, 31);
   display: flex;
@@ -40,12 +44,21 @@
   color: rgb(0, 163, 224);
 }
 
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: rgba(43, 43, 43, 0.95);
+}
+
 .selected-link {
   color: rgb(0, 163, 224) !important;
 }
 
 .section-about {
   background-color: rgb(43, 43, 43);
+  padding-top: 8.4rem;
   padding-bottom: 5.6rem;
 }
 
@@ -125,7 +138,8 @@
   color: rgb(244, 244, 244);
 }
 
-.course-detail-btn {
+.course-detail-btn:link,
+.course-detail-btn:visited {
   position: absolute;
   bottom: 2.1rem;
   color: #00aeef;
@@ -134,6 +148,11 @@
   display: flex;
   gap: 1rem;
   align-items: center;
+}
+
+.course-detail-btn:hover,
+.course-detail-btn:active {
+  color: #2f81b0;
 }
 
 .section-project-partners {
